# facul_ed2

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/arthur_core/: arthur_core.c  arthur_core.h
src/avl/: avl.c  avl.h  main.c
src/bst/: CMakeLists.txt  main.c  tree.c  tree.h
src/btree/: btree.c  btree.h  main.c
src/heap/: heap.c  heap.h  main.c
src/other/: main.c
src/redblack/: main.c  redblack.c  redblack.h
src/rev/: CMakeLists.txt  main.c  student.c  student.h
src/treap/: main.c  treap.c  treap.h
tests/: CMakeLists.txt  Makefile  avl_test.c  bst_test.c
